--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -35,26 +35,36 @@
             <td>{{product.title}}</td>
             <td>{{product.price}}</td>
             <td>
-                <button class="btn btn-danger" ng-click="deleteProductById(product.id)">Delete</button>
-                <button type="button" class="btn btn-info" ng-click="showProductInfo(product.id)">Info</button>
+                <button class="btn btn-primary" ng-click="addToCart(product.id)">Добавить в корзину</button>
             </td>
         </tr>
         </tbody>
     </table>
-<!--    <p></p>-->
-<!--    <h3>Добавить продукт</h3>-->
-<!--    <p></p>-->
-<!--    <form class="row g-3" ng-submit="createNewProduct()">-->
-<!--        <div class="col-auto">-->
-<!--            <input type="text" class="form-control" id="newProductTitle" ng-model="newProduct.title" placeholder="Название">-->
-<!--        </div>-->
-<!--        <div class="col-auto">-->
-<!--            <input type="number" class="form-control" id="newProductPrice" ng-model="newProduct.price" placeholder="Цена">-->
-<!--        </div>-->
-<!--        <div class="col-auto">-->
-<!--            <button type="submit" class="btn btn-primary mb-3">Создать</button>-->
-<!--        </div>-->
-<!--    </form>-->
+
+    <h3>Корзина</h3>
+    <p></p>
+    <table class="table table-hover">
+        <thead>
+        <tr>
+            <td>Название</td>
+            <td>Количество</td>
+            <td>Цена</td>
+            <td></td>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="item in cart.items">
+            <td>{{item.productTitle}}</td>
+            <td>{{item.quantity}}</td>
+            <td>{{item.priceProduct + ' x ' + item.quantity + ' = ' + item.price}}</td>
+        </tr>
+        <tr>
+            <td>Итого</td>
+            <td></td>
+            <td>{{cart.totalPrice}}</td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 </body>
 </html>
