--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,12 +9,47 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular.min.js"></script>
+    <script src = "https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.11/ngStorage.min.js"></script>
     <script src="index.js"></script>
 </head>
 
 <body>
 
 <div class="container" ng-controller="indexController">
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">VinMarket</a>
+                </li>
+
+                <li class="nav-item" ng-show="!isUserLoggedIn()">
+                    <form class="align-middle" ng-submit="tryToAuth()">
+                        <div class="input-group input-group-sm" style="...">
+                            <input id="navLoginField" class="form-control" ng-model="user.username" type="text"
+                                   aria-describedby="inputGroup-sizing-sm" style="...">
+
+                            <input id="navPasswordField" class="form-control" ng-model="user.password" type="password"
+                                   aria-describedby="inputGroup-sizing-sm" style="...">
+
+                            <button id="navLoginSubmit" class="btn btn-outline-warning btn-sm"
+                                    style="..." type="submit">Войти
+                            </button>
+                        </div>
+                    </form>
+                </li>
+                <li class="nav-item" ng-show="isUserLoggedIn()" style="...">
+                    <button class="btn btn-outline-secondary btn-sm" ng-click="tryToLogout()">Выйти</button>
+                </li>
+
+                <li class="nav-item" style="padding: 4px;">
+                    <button class="btn btn-outline-warning btn-sm" ng-click="authCheck()">Кто я?</button>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <p></p>
     <h1>VinMarket</h1>
     <p></p>
@@ -55,8 +90,15 @@
         <tbody>
         <tr ng-repeat="item in cart.items">
             <td>{{item.productTitle}}</td>
-            <td>{{item.quantity}}</td>
+            <td>
+                <button type="button" class="btn btn-secondary btn-sm" ng-click="reduceQuantity(item.productId)">-</button>
+                {{item.quantity}}
+                <button type="button" class="btn btn-primary btn-sm" ng-click="addQuantity(item.productId)">+</button>
+            </td>
             <td>{{item.priceProduct + ' x ' + item.quantity + ' = ' + item.price}}</td>
+            <td>
+                <button class="btn btn-danger" ng-click="removeFromCart(item.productId)">Убрать из корзины</button>
+            </td>
         </tr>
         <tr>
             <td>Итого</td>
@@ -65,6 +107,7 @@
         </tr>
         </tbody>
     </table>
+    <button class="btn btn-secondary" ng-click="clearCart()">Очистить корзину</button>
 </div>
 </body>
 </html>
